--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </body>
 
 
-<a href="https://preview.construct.net/local/index.html">This Is Game Dodge</a>
+<a href="https://murrayitclub.github.io/gabe_oof/">This Is Game Dodge</a>
 
 <img src="download2.jpg"
         alt="cat">
