--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
   
      <a href="">Another Photo</a>
 </body>
+<img src="Image2.jpg"
+        alt="ct">
 
+<img src="Image3.jpg"
+        alt="ca">
 
 <a href="https://murrayitclub.github.io/gabe_oof/">This Is Game Dodge</a>
 
