--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   
      <a href="">Another Photo</a>
 </body>
+<body>
 <img src="Image2.jpg"
         alt="ct">
 
@@ -84,3 +85,4 @@
 
 <img src="download2.jpg"
         alt="cat">
+</body>
