--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   
   
 <li>hello</li>
-
+<li> im gabe</li>
   
 <body>
   <p>
@@ -70,19 +70,15 @@
   </p>
   
     <a href="https://www.crunchyroll.com/">This Is My Favorite Website To Watch Anime On</a>
-  
-  
+  <img src="image2.jpeg"
+        alt="ct">
+  <img src="image3.jpeg"
+        alt="cat">
      <a href="">Another Photo</a>
 </body>
-<body>
-<img src="Image2.jpg"
-        alt="ct">
 
-<img src="Image3.jpg"
-        alt="ca">
 
-<a href="https://murrayitclub.github.io/gabe_oof/">This Is Game Dodge</a>
+<a href="https://preview.construct.net/local/index.html">This Is Game Dodge</a>
 
 <img src="download2.jpg"
         alt="cat">
-</body>
